# pack

./: .gitignore  README.md  check_dpi.py  main.py  pipeline.py  purge_logs.sh  pyproject.toml  result.json  zip_data.sh
aggregate/: aggregate_logs.py  logs.py  video.py
aggregation_analysis/: __main__.py  aggregate_logs.py  features_dataset.json  format_logs.py  formatting.py  manually_label.py  plot.py  regression_dataset.json  testing.py  to_video.py
analyze/: inspect_df.py  plot_raw_logs.py
label/: __main__.py  caption_matching.py  debugging.py  discovery.py  models.py  processor.py  prompt.txt  session_processor.py  session_visualizer.py  utils.py  video.py  vllm_server_manager.py
label/clients/: __init__.py  client.py  create.py  gemini.py  gemini_client.py  prompt_client.py  qwen_2_5_vl_client.py  qwen_3_vl_client.py  vllm.py
modules/: __init__.py  aggregated_log.py  dataset.py  raw_log.py  verl_dataset.py
observers/: event_queue.py  input_event_handler.py  log_break_analysis.py  logs.py  main.py  observer.py  plot_raw_data.py  screenshot_manager.py  visualize_aggregation.py
prompt/: all.py  annotate.py  prompt.py  prompt.txt
prompting_benchmark/: __main__.py
prompting_benchmark/data/: aggregated_logs_85.json  events.jsonl
prompting_benchmark/data/chunks_85_60_1/: all_chunks_summary.json  chunk_000_result.json  chunk_001_result.json  chunk_002_result.json  chunk_003_result.json  chunk_004_result.json  chunk_005_result.json
record/: __init__.py  __main__.py  constants.py  event_queue.py  input_event_handler.py  main.py  monitor.py  saniy_analysis.py  save_logic.py  screenshot_manager.py  workers.py
record/handlers/: __init__.py  aggregation.py  input_event.py  screenshot.py
record/models/: __init__.py  aggregation.py  event.py  event_queue.py  image.py  image_queue.py
record/monitor/: __init__.py  reader.py  summary.py  viewer.py
record/workers/: __init__.py  aggregation.py  save.py  screenshot.py  ssim.py  wandb.py
src/label/: __main__.py  discovery.py  models.py  processor.py  video.py  visualizer.py  vllm_server.py
src/label/clients/: __init__.py  bigquery.py  client.py  gemini.py  vllm.py
src/label/prompts/: default.txt  screenshots_only.txt  video_only.txt
src/misc/: task_extraction.py  to_dataset.py
src/record/: __main__.py  constants.py  sanitize.py
src/record/handlers/: __init__.py  accessibility.py  input_event.py  screenshot.py
src/record/models/: aggregation.py  event_queue.py  image.py  image_queue.py
src/record/monitor/: __init__.py  summary.py  viewer.py
src/record/workers/: aggregation.py  save.py  screenshot.py
train/: eval.py  main.py
