[project]
# Those dependencies are a Python Standard (not Poetry) and are defined
# here: https://packaging.python.org/en/latest/specifications/dependency-specifiers/#dependency-specifiers
# Poetry uses those dependencies though!
# More details about local version identifier (e.g. +cu126)
# can be found here: https://packaging.python.org/en/latest/specifications/version-specifiers/
dependencies = [
    "pynput (>=1.8.1,<2.0.0)",
    "mss (>=10.0.0,<11.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "ruptures (>=1.1.9,<2.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]
description = ""
name = "pack"
requires-python = ">=3.11,<=3.13"
version = "0.1.0"

[tool.poetry]
package-mode = false
